Fix spacing between name and domain

--- a/packages/ssr-web/app/components/card-space/user-page/index.css
+++ b/packages/ssr-web/app/components/card-space/user-page/index.css
@@ -72,7 +72,7 @@
   max-width: 30rem;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: var(--boxel-sp-xxl);
+  margin-bottom: var(--boxel-sp-xxxs);
   overflow-wrap: break-word;
 }
 
@@ -82,6 +82,7 @@
   font-weight: 700;
   letter-spacing: 1px;
   word-break: break-all;
+  margin-bottom: var(--boxel-sp-xl);
 }
 
 .card-space-user-payment-link {
